--- a/project-01/style.css
+++ b/project-01/style.css
@@ -8,7 +8,6 @@ body {
     border: 0;
     background: grey;
     vertical-align: baseline;
-    line-height: 1;    
 }
 
 /* Project Typography */
@@ -16,237 +15,282 @@ body {
     font-size: 16px;
     font-family: 'Raleway Light', Arial, sans-serif;
     color: #2d2d2d;
+    line-height: 1;    
 }
 
-.producttype, .price {
+h1, 
+h2, /* Hand Crafted Styles, Most Loved Products, Sign Up for Updates*/
+h3 {
+    font-family: 'Playfair Display', Arial, sans-serif;
+    line-height: 1; 
+}
+
+.producttype,  /* also Footer class=address */
+.price {
     color: #969696;
 }
 
 .wordlinks a,
-.carousel h3 {
+.carousel-cell h3 {
     color: #e2574c;
 }
 
-p {
-    font-size: 20px;
-}
+/* Top: Logo Nav Cart */
+    .top-nav {
+        background-color: white;
+        border-bottom: 1px solid #d7d7d7;
+        box-shadow: 1px 1px 6px 0px hsla(0, 0%, 39%, .25);
+        /* box-shadow: h-offset v-offset blur spread color */
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: 9999;
+    }
+
+    .top-nav-stuff {
+        width: 100%;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        padding: 1rem 1.5rem;
+        /* border: 3px dotted rgb(184, 57, 163); temporary */
+        max-width: 1240px; /* allows div to shrink with zoom */
+    }
+
+    .navcontainer { /* http://css.maxdesign.com.au/listutorial/horizontal_master.htm */
+        align-self: center;
+        display: inline-block;
+        vertical-align: middle;
+        /* border: 3px dotted black; temporary */
+        order: 2;
+        flex-basis: 60%;
+    }
+
+    .logo {
+        order: 1;
+        flex-basis: 20%;
+    }
+
+    .logo img {
+        width: 150px;
+        /* border: 3px dotted black; temporary */
+    }
+
+    .cart {
+        text-align: right;
+        order: 3;
+        flex-basis: 20%;
+    }
+
+    .cart img {
+        width: 60px;
+        /* border: 3px dotted black; temporary */
+    }
+
+    .navcontainer ul {  
+        margin: 0;
+        padding: 10px 10px;
+        list-style-type: none;
+        text-align: center;
+    }
+
+    .navcontainer ul li {
+        display: inline;
+    }
+
+    .navcontainer ul li a {
+        text-decoration: none;
+        padding: .2em 1em;
+        background-color: rgb(255, 255, 255);
+    }
+
+    .navcontainer ul li a:hover {
+        color: #b64036;
+        background-color: white;
+    }
+
+/* Banner / Current Title  */
+    .banner {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 545px;
+        margin-top: 95px; /* based on header, prevent overlap */
+        /* background flowers + girl */
+        background-image: url(images/banner-girl.png), url(images/flower-bkgd.jpg) ;
+        background-position: center 4rem, top;
+        background-repeat: no-repeat, repeat-x;
+        background-size: 250px, contain;
+    }       
+
+    .banner h2 {
+        font-size: 1.25rem;
+        font-family: 'Railway Web' ;
+        line-height: 4rem;
+        color: white;
+        text-shadow: 2px 2px 2px grey;
+        z-index: 1;
+    }
+
+    .banner h2 span {
+        font-size: 4rem;
+        font-family: 'Playfair Display';
+        color: white;
+    }
+
+/* Section1 Hand-Crafted Styles */
+    #section1 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center; 
+        background: white;
+    }
+
+    .section1-stuff {
+        max-width: 720px;
+        padding: 4rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #section1 h2 {
+        text-align: center;
+        font-size: 2.5rem;
+        font-style: italic;
+        margin-bottom: 2rem;
+    }
+
+    #section1 h2 span{
+        font-style: normal;
+        font-weight: 800;
+    }
+
+    #section1 p {
+        text-align: center;
+        font-size: 1.1rem;
+        line-height: 2rem;
+        width: 100%;
+    }
+
+/* Shop Grid flexbox */
+    #shop-grid {
+        background: green;
+    }
+
+    .shop-grid-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center; /* not working */
+        align-items: center; /* not working */
+        /* border: 5px darkgoldenrod dotted; temporary */
+    }
+
+    .shopgriditem {
+        border: 4px solid #fff;
+        display: flex;
+        justify-content: center; 
+        align-items: center;
+        color: white;
+        font-size: 2.25rem;
+        font-weight: 500;
+    }
+
+    .larger {
+        width: 50vw;
+        height: 25vw;
+        flex: 2 0 50%; 
+        /*flex: grow shrink basis  */      
+    }
+
+    .smaller {
+        width: 25vw;
+        height: 25vw;
+        flex: 1 0 25%;  
+    }
+
+    .shop-grid-container div:nth-child(1) {
+        border-left: none;
+    }
+
+    .shop-grid-container div:nth-child(6) {
+        border-right: none;
+    }
+
+    .shop-grid-container div:nth-child(3) {
+        border-right: none;
+    }
+
+    .shop-grid-container div:nth-child(4) {
+        border-left: none;
+    }
+
+    .mens {
+        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(images/mens-category.jpg);
+        background-size: cover;
+    }
+
+    .womens {
+        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(images/womens-category.jpg);
+        background-size: cover;
+    }
+    .trends {
+        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(images/trends-category.jpg);
+        background-size: cover;
+    }
+    .glasses {
+        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(images/glasses-category.jpg);
+        background-size: cover;
+    }
+    .sale {
+        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(images/sale-category.jpg);
+        background-size: cover;
+    }
+    .bags {
+        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(images/bags-category.jpg);
+        background-size: cover;
+    }
 
 
-/* Top banner NAV links */
-main {
-    min-height: 50px;
-    min-width: 400px; /* NDA */
-    background: #fff;
-    padding: 20px 20px;
-    border-radius: 50px;}
-    
-main ul {
-        padding: 0;
-        list-style: none;}
-.twitter {
-    display: flex;}
-.twitter_bird {
-    margin-left: auto;
-    margin-right: auto}
-
-/* http://css.maxdesign.com.au/listutorial/horizontal_master.htm */
-
-.top-nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 9999;
-    width: 100%;
-    min-height: 14vh;
-    background-color: white;
-    border-bottom: 1px solid #d7d7d7;
-   /* is making this section flex necessary? */
-}
-
-.top-nav-stuff {
-    width: 100%;
-    display: flex;
-    justify-content: space-between; 
-    align-items: center;
-    padding: 15px 150px;
-    border: 3px dotted rgb(138, 102, 102);
-}
-
-.navcontainer {
-    align-self: center;
-    display: inline-block;
-    vertical-align: middle;
-    border: 3px dotted black;
-}
-
-.logo img {
-    width: 150px;
-    border: 3px dotted black;
-}
-
-.cart img {
-    width: 60px;
-    border: 3px dotted black;
-}
-
-.navcontainer ul {  
-    margin: 0;
-    padding: 10px 20px;
-    list-style-type: none;
-    text-align: center;
-}
-
-.navcontainer ul li {
-    display: inline;
-}
-
-.navcontainer ul li a {
-    text-decoration: none;
-    padding: .2em 1.5em;
-    background-color: white;
-}
-
-.navcontainer ul li a:hover {
-    color: #b64036;
-    background-color: white;
-}
-
-li:nth-child(2) {
-    color: pink;
-}
-
-/* Header Girl Banner */
-
-header {
-    display: flex;
-    flex-direction: column;
-    justify-content: center; /* vertically aligns items */
-    align-items: center; /* horizontally aligns items */
-    min-height: 500px;
-    background-image: url(images/flower-bkgd.jpg);
-    background-size: contain, cover;
-    position: relative;
-    margin-top: 14vh;
-}
-
-header h2 {
-    font-size: 80px;
-    font-family: 'Playfare Display', serif;
-    color: white;
-    text-align: center;
-}
-
-header img {
-    margin:auto; /* Required */
-    position: absolute; /* Required */
-    bottom:0; /* Aligns at the bottom */
-    left:0;
-    right:0; /* Aligns horizontal center */
-    max-height:100%; /* images bigger than container */
-    max-width:100%;  /* will be shrinked to size */ 
-}
-
-/* Section1 WORDS two lines */
-.section1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center; /* vertically aligns items */
-    align-items: center; /* horizontally aligns items */
-    background: orange;
-}
-
-.section1 h2 {
-    font-size: 30px;
-    text-align: center;
-}
-
-.section1 p {
-    font-size: 20px;
-    text-align: center;
-}
-
-/* 6 boxes flexbox */
-.shop-grid {
-    display: flex;
-    justify-content: center;
-}
-
-.shop-grid-container {
-    background: green;
-    display: flex;
-    flex-wrap: wrap;
-    text-align: center;
-    justify-content: center;
-    border: 5px darkgoldenrod dotted;
-    max-width: 65vw;
-}
-
-.shopgriditem {
-    border: 2px solid #fff;
-}
-
-.larger {
-    width: 30vw;
-    height: 15vw;  
-}
-
-.smaller {
-    width: 15vw;
-    height: 15vw;
-}
-
-
-.mens {
-    background-image: url(images/mens-category.jpg);
-    background-size: cover;
-}
-
-.womens {
-    background-image: url(images/womens-category.jpg);
-    background-size: cover;
-}
-.trends {
-    background-image: url(images/trends-category.jpg);
-    background-size: cover;
-}
-.glasses {
-    background-image: url(images/glasses-category.jpg);
-    background-size: cover;
-}
-.sale {
-    background-image: url(images/sale-category.jpg);
-    background-size: cover;
-}
-.bags {
-    background-image: url(images/bags-category.jpg);
-    background-size: cover;
-}
-
-.shopgriditem {
-    color: white;
-    font-weight: 700;
-    text-align: center;
-}
-
-/* /* Section3 Carousel  */
-.section3carousel {
+/* Section3 Carousel  */
+#section3carousel {
     min-height: 650px;
-    background: blue;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background: white;
+    /* don't use flexbox when using flickity */
 }
 
-.section3carousel .container {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
+.carousel-container {
+    max-width: 1240px;
+    margin: auto;
     text-align: center;
+}
+
+#section3carousel h2 {
+    text-align: center;
+    font-size: 2.5rem;
+    font-style: italic;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+}
+
+#section3carousel h2 span {
+    font-style: normal;
+    font-weight: 800;
+}
+
+.carousel-container .main-carousel {
+    max-width: 1240px;
+    justify-content: center;
+    align-items: center;
 }
 
 /* section4 Sign Up Newsletter */
-.section4signup {
+#section4signup {
     min-height: 350px;
     background: url(images/wave-bkgd.jpg) no-repeat bottom;
     display: flex;
@@ -254,28 +298,35 @@ header img {
     align-items: center;
 }
 
-.section4signup .container {
+#section4signup .container {
     display: flex;
     flex-direction: column;
-    width: 50%;
-    text-align: center;
+    justify-content: center;
+    align-items: center;
+    max-width: 720px;
+    color: white;
 } 
 
-.section4signup .container h2 {
-    font-size: 50px;
-    margin: 0;
-    color: white;
+#section4signup .container h2 {
+    text-align: center;
+    font-size: 2.5rem;
+    font-style: italic;
+    margin-bottom: 1.5rem;
 }
 
-.section4signup .container h2 {
-    font-family: 'Playfair Display';
-    color: white;
+#section4signup .container h2 span {
+    font-style: normal;
+    font-weight: 800;
 }
-.section4signup .container p {
-    color: pink;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    line-height: 1.5em;
+
+#section4signup .container h2 {
+    font-family: 'Playfair Display';
+}
+#section4signup .container p {
+    text-align: center;
+    font-size: 1.1rem;
+    line-height: 2.5rem;
+    margin-bottom: 1.5rem;
 }
 
 /* Footer bottom */
@@ -329,12 +380,3 @@ footer a:hover {
 footer i {
     width: 2em;
 }
-
-
-
-
-/*end of color coding sections and heights */
-
-
-
-
