--- a/project-01/style.css
+++ b/project-01/style.css
@@ -11,35 +11,35 @@ body {
 }
 
 /* Project Typography */
-body {
-    font-size: 16px;
-    font-family: 'Raleway Light', Arial, sans-serif;
-    color: #2d2d2d;
-    line-height: 1;    
-}
+    body {
+        font-size: 16px;
+        font-family: 'Raleway Light', Arial, sans-serif;
+        color: #2d2d2d;
+        line-height: 1;    
+    }
 
-h1, 
-h2, /* Hand Crafted Styles, Most Loved Products, Sign Up for Updates*/
-h3 {
-    font-family: 'Playfair Display', Arial, sans-serif;
-    line-height: 1; 
-}
+    h1, 
+    h2, /* Banner, 'Hand Crafted Styles', 'Most Loved Products', 'Sign Up for Updates'*/
+    h3 {
+        font-family: 'Playfair Display', Arial, sans-serif;
+        line-height: 1; 
+    }
 
-.producttype,  /* also Footer class=address */
-.price {
-    color: #969696;
-}
+    .producttype,  /* also Footer class=address */
+    .price {
+        color: #969696;
+    }
 
-.wordlinks a,
-.carousel-cell h3 {
-    color: #e2574c;
-}
+    .wordlinks a,
+    .carousel-cell h3 {
+        color: #e2574c;
+    }
 
 /* Top: Logo Nav Cart */
     .top-nav {
         background-color: white;
         border-bottom: 1px solid #d7d7d7;
-        box-shadow: 1px 1px 6px 0px hsla(0, 0%, 39%, .25);
+        box-shadow: 1px 1px 6px 0px hsla(0, 0%, 39%, .75); /* temporary 0.75, final 0.25 */
         /* box-shadow: h-offset v-offset blur spread color */
         position: fixed;
         top: 0;
@@ -117,17 +117,17 @@ h3 {
         justify-content: center;
         align-items: center;
         width: 100%;
-        height: 545px;
+        height: 550px; /* trial and error + goal */
         margin-top: 95px; /* based on header, prevent overlap */
         /* background flowers + girl */
-        background-image: url(images/banner-girl.png), url(images/flower-bkgd.jpg) ;
-        background-position: center 4rem, top;
-        background-repeat: no-repeat, repeat-x;
-        background-size: 250px, contain;
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(images/banner-girl.png), url(images/flower-bkgd.jpg) ;
+        background-position: center, center 4rem, top; /* girl trial and error */
+        background-repeat: no-repeat, no-repeat, repeat-x;
+        background-size: contain, 250px, contain; /* girl trial and error */
     }       
 
     .banner h2 {
-        font-size: 1.25rem;
+        font-size: 1.3rem;
         font-family: 'Railway Web' ;
         line-height: 4rem;
         color: white;
@@ -268,6 +268,7 @@ h3 {
     max-width: 1240px;
     margin: auto;
     text-align: center;
+    padding-bottom: 4rem;
 }
 
 #section3carousel h2 {
@@ -285,14 +286,31 @@ h3 {
 
 .carousel-container .main-carousel {
     max-width: 1240px;
-    justify-content: center;
-    align-items: center;
+    padding-bottom: 1rem;
+}
+
+.carousel-cell h3,
+.producttype,
+.price {
+    margin-bottom: 1.25rem;
+}
+
+.carousel-cell h3 {
+    font-size: 1.5rem;
+}
+
+button {
+    border-radius: 25px;
+    border-style: none;
+    background-color: black;
+    color: white;
+    padding: 0.5rem 1rem;   
 }
 
 /* section4 Sign Up Newsletter */
 #section4signup {
     min-height: 350px;
-    background: url(images/wave-bkgd.jpg) no-repeat bottom;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(images/wave-bkgd.jpg) no-repeat bottom;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -312,6 +330,11 @@ h3 {
     font-size: 2.5rem;
     font-style: italic;
     margin-bottom: 1.5rem;
+    text-shadow: 2px 2px 2px grey;
+}
+
+.sign-up-form {
+    position: relative; 
 }
 
 #section4signup .container h2 span {
@@ -321,12 +344,40 @@ h3 {
 
 #section4signup .container h2 {
     font-family: 'Playfair Display';
+    width: 85%;
 }
 #section4signup .container p {
     text-align: center;
     font-size: 1.1rem;
     line-height: 2.5rem;
     margin-bottom: 1.5rem;
+    width: 85%;
+}
+
+input[type=email] { 
+    border: 0;
+    border-radius: 25px;
+    padding: 1rem 1.5rem;
+    padding-right: 15rem;
+    font-size: 1.1rem;
+}
+
+input[type=submit] {
+    border: 0;
+    border-radius: 25px;
+    padding: 0.75rem 2rem;
+    background-color: #e2574c;
+    cursor: pointer;
+    color: white;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%); /* http://zerosixthree.se/vertical-align-anything-with-just-3-lines-of-css/ */
+    right: 1%;
+    font-size: 1.1rem;
+}
+
+input[type=submit]:hover {
+    background-color: #b64036
 }
 
 /* Footer bottom */
@@ -342,7 +393,7 @@ footer .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border: 5px blue dotted;
+    /* border: 5px blue dotted; temporary */
 }
 
 .contact p {
@@ -366,11 +417,12 @@ footer .container {
 
 .socialmedianame {
     font-size: 16px;
+    cursor: pointer;
 }
 
 footer a {
     color: white;
-    text-decoration: none;
+    text-decoration: underline;
 }
 
 footer a:hover {
