--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ body {
         height: 400px;
         margin-top: 101px; /* based on header, prevent overlap *//* ADJUSTED THIS */
         /* background flowers + girl */
-        background: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(images/banner-girl-compressed.png), url(images/flower-bkgd-compressed.jpg) ;
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(../images/banner-girl-compressed.png), url(../images/flower-bkgd-compressed.jpg) ;
         background-position: center, center 4rem, top;
         background-repeat: no-repeat, no-repeat, repeat-x;
         background-size: contain, 150px, cover;
@@ -229,28 +229,28 @@ body {
     }
 
     .mens {
-        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(images/mens-category.jpg);
+        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(../images/mens-category.jpg);
         background-size: cover;
     }
 
     .womens {
-        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(images/womens-category.jpg);
+        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(../images/womens-category.jpg);
         background-size: cover;
     }
     .trends {
-        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(images/trends-category.jpg);
+        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(../images/trends-category.jpg);
         background-size: cover;
     }
     .glasses {
-        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(images/glasses-category.jpg);
+        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(../images/glasses-category.jpg);
         background-size: cover;
     }
     .sale {
-        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(images/sale-category.jpg);
+        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(../images/sale-category.jpg);
         background-size: cover;
     }
     .bags {
-        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(images/bags-category.jpg);
+        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(../images/bags-category.jpg);
         background-size: cover;
     }
 
@@ -311,7 +311,7 @@ body {
 /* Sign Up Newsletter */
     #newsletter {
         min-height: 350px;
-        background: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(images/wave-bkgd.jpg) no-repeat bottom;
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(../images/wave-bkgd.jpg) no-repeat bottom;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -621,7 +621,7 @@ body {
         height: 550px; 
         margin-top: 95px; /* based on header, prevent overlap */
         /* background flowers + girl */
-        background: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(images/banner-girl-compressed.png), url(images/flower-bkgd-compressed.jpg) ;
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(../images/banner-girl-compressed.png), url(../images/flower-bkgd-compressed.jpg) ;
         background-position: center, center 4rem, top; /* girl trial and error */
         background-repeat: no-repeat, no-repeat, repeat-x;
         background-size: contain, 250px, contain; /* girl trial and error */
