--- a/fonts/fontstylesheet.css
+++ b/fonts/fontstylesheet.css
@@ -23,7 +23,7 @@
 }
 
 @font-face {
-    font-family: 'Raleway';
+    font-family: 'Raleway Light';
     src: url('Raleway-Light.eot');
     src: url('Raleway-Light.eot?#iefix') format('embedded-opentype'),
         url('Raleway-Light.woff2') format('woff2'),
@@ -34,7 +34,7 @@
 }
 
 @font-face {
-    font-family: 'Raleway';
+    font-family: 'Raleway Light';
     src: url('Raleway-LightItalic.eot');
     src: url('Raleway-LightItalic.eot?#iefix') format('embedded-opentype'),
         url('Raleway-LightItalic.woff2') format('woff2'),
