--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ body {
         text-decoration: none;
         padding: .2em 0.85rem;
         background-color: rgb(255, 255, 255);
-        font-size: 0.rem;
+        font-size: 0.85rem;
     }
 
     .navcontainer ul li a:hover {
@@ -151,7 +151,7 @@ body {
 
     .section1-about {
         max-width: 720px;
-        padding: 3.5em 1.75rem;
+        padding: 3.5em 1rem;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -313,7 +313,7 @@ body {
 
 /* Sign Up Newsletter */
     #newsletter {
-        min-height: 350px;
+        min-height: 340px;
         background: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(../images/wave-bkgd.jpg) no-repeat bottom;
         display: flex;
         justify-content: center;
@@ -489,7 +489,7 @@ body {
 /* Banner / Current Title  */
         .banner {
             height: 400px;
-            margin-top: 70px; /* based on header, prevent overlap */
+            margin-top: 80px; /* based on header, prevent overlap */
         }       
 
         .banner h2 {
@@ -502,7 +502,7 @@ body {
 
 /* Section1 Hand-Crafted Styles */
     .section1-about {
-        padding: 4rem;
+        padding: 4rem 2% 4rem 2%;
     }
 
     #section1 h2 {
@@ -563,6 +563,12 @@ body {
     }
 
 /* Sign Up Newsletter */
+    #newsletter {
+        padding: 3.5rem 0;
+    }
+    .sign-up-form {
+        width: 67%;
+    }
     input[type=email] { 
         padding: 1em 1.5rem;
         padding-right: 15rem;
@@ -573,10 +579,6 @@ body {
     }
 
 /* Footer bottom */
-    footer {
-        padding: 4em 2rem;
-    }
-
     footer .container {
         display: flex;
         flex-direction: row;
@@ -599,7 +601,7 @@ body {
 @media screen and (min-width: 1240px) {
 /* Top: Logo Nav Cart */
     .top-nav-inner {
-        padding: 1em 1.5rem;
+        padding: 0.75rem 1.5rem;
         max-width: 1240px; /* allows div to shrink with zoom */
     }
 
@@ -651,10 +653,14 @@ body {
 
 /* Footer bottom */
     footer {
-        padding: 4em 10rem;
+        padding: 3.5em;
     }
 
     footer .container {
         max-width: 1240px;
+    }
+
+    .social-media {
+        padding-right: 5rem;
     }
 }
