--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
     margin: 0 auto;
     padding: 0;
     border: 0;
-    background: grey;
+    background: white;
     vertical-align: baseline;
 }
 
@@ -40,7 +40,7 @@ body {
 
 /* Top: Logo Nav Cart */
     .top-nav {
-        background-color: white;
+        background: white;
         border-bottom: 1px solid #d7d7d7;
         box-shadow: 1px 1px 6px 0px hsla(0, 0%, 39%, .25);
         position: fixed;
@@ -102,13 +102,11 @@ body {
     .navcontainer ul li a {
         text-decoration: none;
         padding: .2em 0.85rem;
-        background-color: rgb(255, 255, 255);
         font-size: 0.85rem;
     }
 
     .navcontainer ul li a:hover {
         color: #b64036;
-        background-color: white;
     }
 
 /* Banner / Current Title  */
@@ -146,7 +144,6 @@ body {
         flex-direction: column;
         justify-content: center;
         align-items: center; 
-        background: white;
     }
 
     .section1-about {
@@ -191,6 +188,7 @@ body {
         color: white;
         font-size: 1.5rem;
         font-weight: 500;
+        background-size: cover;
     }
 
     .larger {
@@ -234,34 +232,27 @@ body {
 
     .mens {
         background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(../images/mens-category.jpg);
-        background-size: cover;
     }
 
     .womens {
         background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(../images/womens-category.jpg);
-        background-size: cover;
     }
     .trends {
         background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(../images/trends-category.jpg);
-        background-size: cover;
     }
     .glasses {
         background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(../images/glasses-category.jpg);
-        background-size: cover;
     }
     .sale {
         background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(../images/sale-category.jpg);
-        background-size: cover;
     }
     .bags {
         background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(../images/bags-category.jpg);
-        background-size: cover;
     }
 
 /* Featured Products Carousel  */
     #featuredproducts {
         min-height: 650px;
-        background: white;
         /* don't use flexbox when using flickity */
     }
 
@@ -627,9 +618,9 @@ body {
         margin-top: 95px; /* based on header, prevent overlap */
         /* background flowers + girl */
         background: linear-gradient(to bottom, rgba(0, 0, 0, 0.20), rgba(1, 1, 1, 0.20)), url(../images/banner-girl-compressed.png), url(../images/flower-bkgd-compressed.jpg) ;
-        background-position: center, center 4em, top; /* girl trial and error */
+        background-position: center, center 4em, top;
         background-repeat: no-repeat, no-repeat, repeat-x;
-        background-size: contain, 250px, contain; /* girl trial and error */
+        background-size: contain, 250px, contain;
     }       
 
     .banner h2 span {
