--- a/css/style.css
+++ b/css/style.css
@@ -82,11 +82,26 @@ body {
 
     .cart {
         order: 2;
-        padding-bottom: 0.5rem;  
+        padding-bottom: 0.5rem;
+        position: relative;  
     }
 
     .cart img {
         width: 50px;
+    }
+
+    .cart-total {
+        color: #fff;
+        background-color: #e2574c;
+        border-radius: 50%;
+        height: 20px;
+        width: 20px;
+        text-align: center;
+        padding-top: 2px;
+        position: absolute;
+        top: -5px;
+        right: -5px;
+        /* display: none; */
     }
 
     .navcontainer ul {  
@@ -605,6 +620,14 @@ body {
         width: 60px;
     }
 
+    .cart-total {
+        height: 25px;
+        width: 25px;
+        padding-top: 3px;
+        top: -5px;
+        right: -5px;
+        /* display: none; */
+    }
     .navcontainer ul {  
         padding: 10px 10px;
     }
