--- a/css/style.css
+++ b/css/style.css
@@ -94,14 +94,14 @@ body {
         color: #fff;
         background-color: #e2574c;
         border-radius: 50%;
-        height: 20px;
-        width: 20px;
+        height: 25px;
+        width: 25px;
         text-align: center;
-        padding-top: 2px;
+        padding-top: 2.5px;
         position: absolute;
         top: -5px;
         right: -5px;
-        /* display: none; */
+        display: none;
     }
 
     .navcontainer ul {  
@@ -313,12 +313,17 @@ body {
         font-size: 1.5rem;
     }
 
-    button {
+    .add-to-cart {
         border-radius: 25px;
         border-style: none;
         background-color: black;
         color: white;
         padding: 0.5em 1rem;   
+    }
+
+    .add-to-cart:hover {
+        background-color: #0f87a2;
+        cursor: pointer;
     }
 
 /* Sign Up Newsletter */
