CSS valid. Better id & class names

--- a/css/style.css
+++ b/css/style.css
@@ -156,15 +156,15 @@ body {
         color: white;
     }
 
-/* Section1 Hand-Crafted Styles */
-    #section1 {
+/* about Hand-Crafted Styles */
+    #about {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center; 
     }
 
-    .section1-about {
+    .about-inner {
         max-width: 720px;
         padding: 3.5em 1rem;
         display: flex;
@@ -173,18 +173,18 @@ body {
         align-items: center;
     }
 
-    #section1 h2 {
+    #about h2 {
         text-align: center;
         font-style: italic;
         margin-bottom: 2rem;
     }
 
-    #section1 h2 span{
+    #about h2 span{
         font-style: normal;
         font-weight: 800;
     }
 
-    #section1 p {
+    #about p {
         text-align: center;
         font-size: 1rem;
         font-family: 'Raleway Light';
@@ -512,16 +512,16 @@ body {
             font-size: 3rem;
         }
 
-/* Section1 Hand-Crafted Styles */
-    .section1-about {
+/* about Hand-Crafted Styles */
+    .about-inner {
         padding: 4rem 2% 4rem 2%;
     }
 
-    #section1 h2 {
+    #about h2 {
         font-size: 2.5rem;
     }
 
-    #section1 p {
+    #about p {
         font-size: 1.1rem;
     }
 
@@ -595,10 +595,6 @@ body {
         display: flex;
         flex-direction: row;
         text-align: left;
-    }
-
-    .social-media {
-        padding-top: none;
     }
 
     .social-media ul li { 
